--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -5859,23 +5859,25 @@ body#wiki #main_content td.printcontent:last-child:not(:first-child) {
   padding: 0;
 }
 .studip-widget {
-  border-color: #d3d9e5;
-  border-style: solid;
-  border-width: 1px;
+  border: 1px solid #d4dbe5;
 }
 .studip-widget .widget-header {
-  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   background-color: #e7ebf1;
   color: #24437c;
-  font-size: 12pt;
+  font-size: 1.1em;
   font-weight: bold;
-  text-align: left;
-  text-indent: 1ex;
   line-height: 2em;
+  padding: 0 1ex;
+  text-align: left;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .studip-widget .header-options {
   float: right;
-  padding: 0px 1ex 0px 0;
+  white-space: nowrap;
 }
 .studip-widget section.contentbox {
   border: none;
@@ -5914,7 +5916,7 @@ body#wiki #main_content td.printcontent:last-child:not(:first-child) {
   text-align: center;
   color: white;
   font-size: 1.3em;
-  background-color: #8899b8;
+  background-color: #899ab9;
 }
 .ui-widget_head:hover {
   cursor: move;
